# BalanceOps

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmessage.txt  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-push
.github/workflows/: ci.yml
apps/api/: main.py
apps/dashboard/: app.py
balanceops/registry/: promote.py
balanceops/tracking/: db.py  init_db.py  log_run.py
docs/: WORKFLOW.md
examples/dataset_specs/: csv_demo.json  finance_credit_demo.json
examples/datasets/: finance_credit_toy.csv
scripts/: bootstrap.ps1  check.ps1  check.sh  ci_check.ps1  dashboard.ps1  demo_run.ps1  e2e.ps1  init_db.ps1  promote.ps1  release_check.ps1  release_check.sh  run_once.ps1  serve.ps1  setup_commit_template.ps1  setup_commit_template.sh  setup_hooks.ps1  setup_hooks.sh  smoke_http.ps1  snapshot_tracked.ps1  snapshot_tracked.sh  track.ps1  track.sh  train_dummy.ps1  train_tabular_baseline.ps1  train_tabular_baseline.sh
src/balanceops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/balanceops/common/: config.py  gitinfo.py  version.py
src/balanceops/datasets/: __init__.py  bundle.py  csv_loader.py  fingerprint.py  registry.py
src/balanceops/models/: dummy.py
src/balanceops/pipeline/: demo_run.py  train_dummy.py  train_tabular_baseline.py
src/balanceops/registry/: current.py  policy.py  promote.py  promote_cli.py
src/balanceops/tools/: __init__.py  ci_check.py  e2e.py  smoke_http.py
src/balanceops/tracking/: init_db.py  manifest.py  read.py
tests/: conftest.py  test_ci_check_steps.py  test_current_registry.py  test_datasets.py  test_predict_hot_reload.py  test_promote_cli.py  test_runs_api.py  test_runs_summary_run_dir_name.py  test_smoke.py  test_train_dummy_policy.py  test_train_tabular_baseline.py  test_version_endpoint.py
