[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balanceops"
version = "0.1.0"
description = "BalanceOps"
requires-python = ">=3.12,<3.13"
dependencies = [
  "streamlit>=1.30",
  "pandas>=2.2",
  "numpy>=2.0",
  "fastapi",
  "httpx",
  "uvicorn[standard]",
  "pydantic",
  "joblib",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
