[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balanceops"
version = "0.1.1.dev0"
description = "BalanceOps"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "streamlit>=1.30",
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.4",
  "scipy",
  "fastapi",
  "httpx",
  "uvicorn[standard]",
  "pydantic",
  "joblib",
  "python-dotenv",
]

[project.scripts]
balanceops-ci-check = "balanceops.tools.ci_check:main"
balanceops-e2e = "balanceops.tools.e2e:main"
balanceops-smoke-http = "balanceops.tools.smoke_http:main"
balanceops-promote = "balanceops.registry.promote_cli:main"
balanceops-init-db = "balanceops.tracking.init_db:main"
balanceops-demo-run = "balanceops.pipeline.demo_run:main"
balanceops-train-dummy = "balanceops.pipeline.train_dummy:main"
balanceops-train-tabular-baseline = "balanceops.pipeline.train_tabular_baseline:main"


[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
